--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,20 @@
 {
-  "rewrites": [
-    {"source": "/(.*)", "destination": "/"}
+  "version": 2,
+  "builds": [
+    {
+      "src": "dist/index.js",
+      "use": "@vercel/node",
+      "config": { "includeFiles": ["dist/**"] }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "dist/index.js",
+      "headers": {
+        "Access-Control-Allow-Origin": "https://project-home-quest.vercel.app",
+        "Access-Control-Allow-Credentials": "true"
+      }
+    }
   ]
 }
