--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
-  "proxy": "http://localhost:5000/",
+  "proxy": "https://project-home-quest-api.vercel.app",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
