--- a/server/vercel.json
+++ b/server/vercel.json
@@ -12,7 +12,7 @@
       "src": "/(.*)",
       "dest": "dist/index.js",
       "headers": {
-        "Access-Control-Allow-Origin": "",
+        "Access-Control-Allow-Origin": "https://home-quest-pink.vercel.app",
         "Access-Control-Allow-Credentials": "true"
       }
     }
