--- a/server/vercel.json
+++ b/server/vercel.json
@@ -13,7 +13,7 @@
       "dest": "dist/index.js",
       "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
       "headers": {
-        "Access-Control-Allow-Origin": "*"
+        "Access-Control-Allow-Origin": "cdskncds"
       }
     }
   ]
