--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "dist/index.js",
+      "src": "dist/api/graphql.js",
       "use": "@vercel/node",
       "config": { "includeFiles": ["dist/**"] }
     }
@@ -10,7 +10,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "dist/index.js",
+      "dest": "dist/api/graphql.js",
       "headers": {
         "Access-Control-Allow-Origin": "https://home-quest-mu.vercel.app",
         "Access-Control-Allow-Credentials": "true"
