--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,31 +1,17 @@
-// {
-//   "compilerOptions": {
-//     "module": "commonjs",
-//     "esModuleInterop": true,
-//     "allowSyntheticDefaultImports": true,
-//     "target": "es6",
-//     "noImplicitAny": true,
-//     "moduleResolution": "node",
-//     "sourceMap": true,
-//     "outDir": "dist",
-//     "baseUrl": ".",
-//     "paths": {
-//       "*": ["node_modules/*", "src/types/*"]
-//     }
-//   },
-//   "include": ["./src/**/*"]
-// }
 {
   "compilerOptions": {
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "target": "es6",
     "module": "commonjs",
-    "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "allowSyntheticDefaultImports": true,
+    "target": "es6",
+    "noImplicitAny": true,
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "outDir": "dist",
+    "baseUrl": ".",
+    "paths": {
+      "*": ["node_modules/*", "src/types/*"]
+    }
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["./src/**/*"]
 }
-
